--- a/survey.html
+++ b/survey.html
@@ -6,31 +6,51 @@
         <title>Survey Form</Form></title>
     </head>
     <body>
-        <header>
-            
-        </header>
+        <header id="header"></header>
         <main>
-            <h1>freeCodeCamp Survey Form</h1>
-            <p>Thank you for taking the time to help us improve the platform</p>
-            <form>
-                <label></label>
-                <input type = "text">
-                <label></label>
-                <input type = "text">
-                <label></label>
-                <input type = "number">
-                <label></label>
-                <select></select>
-                <label></label>
-                <input type = "radio">
-                <label></label>
-                <select></select>
-                <label></label>
-                <input type="checkbox">
-                <label></label>
-                <textarea>
-                <button></button>
-            </form>
+            <div>
+            <h1 id="title">freeCodeCamp Survey Form</h1>
+            <p id="under-title">Thank you for taking the time to help us improve the platform</p>
+            </div>
+            <div id="back">
+                <form id="form" class="space">
+                    <div class="inputs">
+                    <label>Name</label>
+                    <input type = "text">
+                    </div>
+                    <div class="inputs">
+                    <label>Email</label>
+                    <input type = "text">
+                    </div>
+                    <div class="inputs">
+                    <label>Age (optional)</label>
+                    <input type = "number">
+                    </div>
+                    <div class="inputs">
+                    <label>Which option best describes your current role?</label>
+                    <select></select>
+                    </div>
+                    <div class="inputs">
+                    <label>Would you recommend freeCodeCamp to a friend?</label>
+                    <input type = "radio">
+                    </div>
+                    <div class="inputs">
+                    <label>What is your favourite feature of freeCodeCamp?</label>
+                    <select></select>
+                    </div>
+                    <div class="inputs">
+                    <label>What would you like to see improved (Check all the apply)</label>
+                    <input type="checkbox">
+                    </div>
+                    <div class="inputs">
+                    <label>Any comments or suggestions?</label>
+                    <textarea>adw</textarea>
+                    </div>
+                    <div id ="space">
+                    <button type="button" id="button">Submit</button>
+                    </div>
+                </form>
+            </div>
         </main>
     </body>
 
