--- a/survey.html
+++ b/survey.html
@@ -5,49 +5,118 @@
         <meta charset="UTF-8">
         <title>Survey Form</Form></title>
     </head>
-    <body>
-        <header id="header"></header>
-        <main>
+    <body class ="mainback">
+        <header id="header">freeCodeCamp</header>
+        <main class="font">
             <div>
             <h1 id="title">freeCodeCamp Survey Form</h1>
             <p id="under-title">Thank you for taking the time to help us improve the platform</p>
             </div>
-            <div id="back">
+            <div id="back" class="round">
                 <form id="form" class="space">
-                    <div class="inputs">
+                    <div class="inputs" id="name" >
                     <label>Name</label>
-                    <input type = "text">
+                    <input type = "text" placeholder=" Enter your name" id="textbox" class="textfont">
                     </div>
                     <div class="inputs">
                     <label>Email</label>
-                    <input type = "text">
+                    <input type = "email" placeholder=" Enter your email" id="textbox" class="textfont">
                     </div>
                     <div class="inputs">
                     <label>Age (optional)</label>
-                    <input type = "number">
+                    <input type = "number" placeholder=" Age" id="textbox" class="textfont">
                     </div>
                     <div class="inputs">
-                    <label>Which option best describes your current role?</label>
-                    <select></select>
+                        <label>Which option best describes your current role?</label>
+                        <select name = "role" id="role" class="textfont">
+                            <option disabled="" selected="" value=""> Select current role</option >
+                            <option value="Student">Student</option>
+                            <option value="Job">Full Time Job</option>
+                            <option value="Learner">Full Time Learner</option>
+                            <option value="NotSay">Prefer Not to Say</option>
+                            <option value="Other">Other</option>
+                        </select>
                     </div>
-                    <div class="inputs">
-                    <label>Would you recommend freeCodeCamp to a friend?</label>
-                    <input type = "radio">
+                    <div class="inputs2 checkfont">
+                        <p>Would you recommend freeCodeCamp to a friend?</p>
+                        <div >
+                            <input type = "radio" value="Definitely" name="recommend">
+                            <label>Definitely</label>
+                        </div>
+                        <div>
+                            <input type = "radio" value="Maybe" name="recommend" >
+                            <label>Maybe</label>
+                        </div>
+                        <div>
+                            <input type = "radio" value="NotSure" name="recommend">
+                            <label>Not sure</label>
+                        </div>
                     </div>
-                    <div class="inputs">
-                    <label>What is your favourite feature of freeCodeCamp?</label>
-                    <select></select>
+                    <div class="inputs checkfont">
+                        <label>What is your favourite feature of freeCodeCamp?</label>
+                        <select name="feature" id = "role" class="checkfont">
+                            <option disabled="" selected="" value=""> Select an option</option>
+                            <option value="Challenges"> Challenges</option>
+                            <option value="Projects"> Projects</option>
+                            <option value="Community"> Community</option>
+                            <option value="Source"> Open Source</option>
+                        </select>
                     </div>
-                    <div class="inputs">
-                    <label>What would you like to see improved (Check all the apply)</label>
-                    <input type="checkbox">
+                    <div class="inputs2 checkfont">
+                        <p>What would you like to see improved (Check all the apply)</p>
+                        <div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Front-end Projects</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Back-end Projects</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Data Visualization</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Challenges</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Open Source Community</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Gitter Help Rooms</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Videos</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>City Meetups</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Wiki</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Forum</label>
+                            </div>
+                            <div>
+                            <input type="checkbox">
+                            <label>Additional Courses</label>
+                            </div>
+                        </div>
                     </div>
-                    <div class="inputs">
-                    <label>Any comments or suggestions?</label>
-                    <textarea>adw</textarea>
+                    <div class="inputs checkfont">
+                        <label>Any comments or suggestions?</label>
+                        <textarea id="endbox" class = "round" placeholder="Enter your comment here..."></textarea>
                     </div>
-                    <div id ="space">
-                    <button type="button" id="button">Submit</button>
+                        <div id ="space">
+                        <button type="submit" id="button">Submit</button>
                     </div>
                 </form>
             </div>
